--- a/fifteenPuzzle_App/package.json
+++ b/fifteenPuzzle_App/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "@capacitor/android": "^5.0.3",
     "@capacitor/core": "^5.0.3",
-    "@capacitor/splash-screen": "latest"
+    "@capacitor/splash-screen": "latest",
+    "@ionic/storage": "^4.0.0",
+    "chart.js": "^4.3.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.3",
